Alrumaysaa Alghamdi - lab-sql-query-from-table-names

--- a/lab-sql-query-from-table-names.ipynb
+++ b/lab-sql-query-from-table-names.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6d5d2bdc-d822-4ed8-815e-b3f223730f15",
    "metadata": {
     "id": "6d5d2bdc-d822-4ed8-815e-b3f223730f15",
@@ -87,8 +87,9 @@
     "import pandas as pd\n",
     "\n",
     "# Table and definitions sample\n",
-    "data = {'table': # ENTER A TABLE COLUMNS HERE,\n",
-    "        'definition': # ENTER A TABLE DEFINITATIONS HERE\n",
+    "data = {'table': {'employees','salary','studies'}# ENTER A TABLE COLUMNS HERE,\n",
+    "        ,'definition': {'Employee information, name...','Salary details for each year','Educational studies, name of the institution, type of studies, level'}# ENTER A TABLE DEFINITATIONS HERE\n",
+    "}\n",
     "df = pd.DataFrame(data)\n",
     "print(df)"
    ]
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "b1cb5957-2df2-4e5e-9e6a-ace955c9817e",
    "metadata": {
     "id": "b1cb5957-2df2-4e5e-9e6a-ace955c9817e"
@@ -159,7 +160,12 @@
    "outputs": [],
    "source": [
     "#Creating the prompt, with the user questions and the tables definitions.\n",
-    "pqt1 = prompt_question_tables.format(tables=text_tables, question=#ENTER YOUR QUERY HERE)"
+    "\n",
+    "# Version 1: Query focusing on employee names and salary details.\n",
+    "pqt1 = prompt_question_tables.format(\n",
+    "    tables=text_tables,\n",
+    "    question=\"Which tables should I query to retrieve employee names along with their salary details?\"\n",
+    ")\n"
    ]
   },
   {
@@ -190,20 +196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "57e07083-be8f-4cd0-95bd-c4b909422c6b",
    "metadata": {
     "id": "57e07083-be8f-4cd0-95bd-c4b909422c6b"
    },
    "outputs": [],
    "source": [
-    "pqt3 = prompt_question_tables.format(tables=text_tables,\n",
-    "                                     question=#ENTER YOUR QUERY HERE)"
+    "# Version 2: Query focusing on employee contact and educational studies.\n",
+    "pqt2 = prompt_question_tables.format(\n",
+    "    tables=text_tables,\n",
+    "    question=\"I need to analyze employee contact information and their educational background. What tables do I need to query?\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "a0eeb79e-caf1-4f48-9897-168d95d2ae37",
    "metadata": {
     "id": "a0eeb79e-caf1-4f48-9897-168d95d2ae37",
@@ -227,7 +236,7 @@
     }
    ],
    "source": [
-    "print(return_OAI(pqt3))"
+    "print(return_OAI(pqt2))"
    ]
   },
   {
@@ -244,6 +253,57 @@
     " - Write a one page report summarizing your findings.\n",
     "     - Were there variations that didn't work well? i.e., where GPT either hallucinated or wrong\n",
     " - What did you learn?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64a406d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Version 3: Query for a comprehensive report.\n",
+    "pqt3 = prompt_question_tables.format(\n",
+    "    tables=text_tables,\n",
+    "    question=\"For generating a comprehensive report on employee performance including salary trends and educational studies, which tables are necessary?\"\n",
+    ")\n",
+    "\n",
+    "print(return_OAI(pqt3))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62c2a6bc",
+   "metadata": {},
+   "source": [
+    "# **Observations and Challenges**\n",
+    "\n",
+    "1. **Clarity and Specificity:**\n",
+    "The experiments showed that clear and specific queries (as in Version 1) lead to more consistent outputs. When the query explicitly mentions data points (names, salary, contact, education), the model is more likely to select the correct tables.\n",
+    "\n",
+    "2. **Ambiguity Issues:**\n",
+    "In some test cases, especially with more comprehensive queries (Version 3), the model occasionally hallucinated or suggested additional tables that were not defined in the prompt. This indicates that too broad a query may introduce ambiguity in the AI’s reasoning process.\n",
+    "\n",
+    "3. **Format Enforcement:**\n",
+    "Including clear instructions such as “Return the table names in a json format” helped guide the model’s response. However, in some instances, the model added extra commentary around the JSON object, which would require post-processing to extract just the table names.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "030906ca",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# **Lessons Learned**\n",
+    "\n",
+    "1. **Prompt Specificity:**\n",
+    "Detailed and unambiguous prompts produce more reliable results. It is important to explicitly mention the expected output format to minimize hallucination.\n",
+    "\n",
+    "2. **Iterative Refinement:**\n",
+    "Experimenting with multiple variations allowed for identifying which elements of the prompt work best. In this case, prompting for specific data points (e.g., names, contact details, educational background) reduced errors.\n",
+    "\n",
+    "3. **Output Validation:**\n",
+    "Even with a clear prompt, validating and post-processing the AI output may be necessary to ensure it strictly adheres to the expected JSON format."
    ]
   }
  ],
